[project]
name = "models"
version = "0.1.2"
description = "A CLI tool to explore and filter AI models from models.dev"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fireducks>=1.3.0",
    "dateparser>=1.2.0",
    "rapidfuzz>=3.9.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "textual>=0.58.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "typer>=0.24.1",
]

[project.scripts]
models = "models.main:app"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["models", "models.*"]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pytest>=9.0.2",
]
